--- a/portfolio.html
+++ b/portfolio.html
@@ -120,6 +120,11 @@
                         <img src="./project (6).png" alt="Project image" /></a>
                     <h3>Pharmaceutical Management system using HTML, CSS, & JS </h3>
                 </div>
+                <div class="portfolio-item">
+                    <a href="https://sahihie-com.netlify.app/">
+                        <img src="./project (7).png" alt="Project image" /></a>
+                    <h3>PROVIDER DIRECTORY OPTIMIZATION SOLUTION using HTML, CSS, & JS </h3>
+                </div>
             </div>
         </div>
     </section>
