--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar">
         <div class="logo">
-            <a href="portfolio.html" id="main"><img src="./logo6.png" alt=""></a>
+            <a href="index.html" id="main"><img src="./logo6.png" alt=""></a>
         </div>
         <div class="hamburger">
             <div class="line"></div>
